# DupliGram

./: .gitignore  README.md  dupligram.py  main.py  pyproject.toml  requirements.txt
dupligram/: __init__.py  database.py  dupliGram.py
