[tool.poetry]
name = "dupligram"
version = "0.1.0"
description = ""
authors = ["ecaf1 <edeilsonazevedo22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.34.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
